--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/NikolaosKantartzopoulos/toDoList#readme",
   "devDependencies": {
     "css-loader": "^6.7.1",
+    "date-fns": "^2.29.3",
     "html-webpack-plugin": "^5.5.0",
     "postcss": "^8.4.16",
     "postcss-loader": "^7.0.1",
